--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:grid="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+<ImageView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="net.sgoliver.android.localizacion.MainActivity">
+    android:scaleType="centerCrop"
+    android:src="@drawable/app_background"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="1">
 
-    <TextView android:id="@+id/lblLatitud"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/latitud"/>
+        <include
+            layout="@layout/app_bar_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:gravity="center_vertical|center_horizontal">
 
-    <TextView android:id="@+id/lblLongitud"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/longitud"/>
 
-    <ToggleButton android:id="@+id/btnActualizar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textOn="@string/parar_actualizaciones"
-        android:textOff="@string/iniciar_actualizaciones" />
+            <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:columnCount="3"
+                android:horizontalSpacing="10dp"
+                android:verticalSpacing="10dp"
+                android:rowCount="3">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/app_demand"
+                        android:onClick="abrirMapa"
+                        android:layout_marginBottom="15dp"
+                        android:layout_marginEnd="15dp" />
 
+                        <TextView
+                            android:layout_width="match_parent"
+
+                            android:layout_height="match_parent"
+                            android:text="Ubicación"
+                            android:textColor="#ffff"
+                            android:gravity="center_horizontal" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/app_directory"
+
+                        android:layout_marginBottom="15dp"
+                        android:layout_marginEnd="15dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+
+                        android:layout_height="match_parent"
+                        android:text="Conversaciones"
+
+                        android:textColor="#ffff"
+                        android:gravity="center_horizontal" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/app_thea"
+                        android:layout_marginBottom="15dp"
+                        android:layout_marginEnd="15dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+
+                        android:layout_height="match_parent"
+                        android:text="¡Ayuda!"
+                        android:textColor="#ffff"
+                        android:gravity="center_horizontal" />
+                </LinearLayout>
+
+            </GridLayout>
+    </LinearLayout>
+    </LinearLayout>
+
+
+    </RelativeLayout>
 </LinearLayout>
