--- a/app/src/main/res/layout/fragment_ubicacion.xml
+++ b/app/src/main/res/layout/fragment_ubicacion.xml
@@ -3,6 +3,17 @@
     android:layout_width="fill_parent"
     android:orientation="vertical"
     android:layout_height="fill_parent">
+    <include
+        layout="@layout/app_bar_main"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5.5" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="20">
+
 
     <TextView android:id="@+id/lblLatitud"
         android:layout_width="wrap_content"
@@ -19,7 +30,7 @@
         android:layout_height="wrap_content"
         android:textOn="@string/parar_actualizaciones"
         android:textOff="@string/iniciar_actualizaciones" />
-
+    </LinearLayout>
 
 
 </LinearLayout>
